# spacy-span-analyzer

./: LICENSE  README.md  requirements-dev.txt  requirements.txt  setup.cfg
examples/: simple_analysis.py
reproducibility/: .gitignore  README.md  project.yml  requirements.txt
reproducibility/scripts/: conll.py  constants.py  genia.py  riqua.py
spacy_span_analyzer/: __init__.py  analyzer.py  cli.py
