[metadata]
name = spacy-span-analyzer
version = 0.3.0
author = Lj V. Miranda
author_email = ljvmiranda@gmail.com
description = Analyze and characterize your Spans. Integrated with spaCy.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ljvmiranda921/spacy-span-analyzer
project_urls = 
    Bug Tracker = https://github.com/ljvmiranda921/spacy-span-analyzer/issues
classifiers = 
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence
    License :: OSI Approved :: MIT License

[options]
python_requires = >= 3.6
packages = find:
install_requires = 
    spacy>=3.1.0
    scipy
    numpy
    wasabi
    typer

[options.entry_points]
console_scripts = 
    spacy-span-analyzer = spacy_span_analyzer.cli:app

[sdist]
formats = gztar

[flake8]
ignore = E203, E266, E501, E731, W503, E741, F541
max-line-length = 88
select = B,C,E,F,W,T4,B9
exclude =
    .env,
    .git,
    __pycache__,
    _tokenizer_exceptions_list.py,